tests/paczka1/fuzzy1/82405273.err
Error in line 12: nwWZp3w S66 68,2
Error in line 3: S66 S441 8,4
Error in line 21: S66 A587 74,0
Error in line 23: S66 A74 70,5
Error in line 27: aeYd A587 76,1
Error in line 30: aeYd S66 67,5
Error in line 36: fvM A74 95,78
Error in line 39: fvM A74 422,5
